<resources>
    <string name="app_name">Notifications</string>
    <string name="show_simple_notifications">Show Simple Notifications</string>
    <string name="cancel_notifications">Cancel Notifications</string>
    <string name="update_notifications">Update Notifications</string>
    <string name="details_screen">Details Screen</string>
    <string name="download">Download...</string>
    <string name="replay_to_message">Replay To message</string>
</resources>