<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hamza.ui.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/showNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_simple_notifications" />
        <Button
            android:id="@+id/cancelNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/cancel_notifications" />
        <Button
            android:id="@+id/updateNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_notifications" />

        <Button
            android:id="@+id/btn_detailsScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/red"
            android:text="@string/details_screen" />
        <Button
            android:id="@+id/btn_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/download" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>